Fix breadcrumb whitespace on school group page (#2830)

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -42,6 +42,10 @@ div.application.container.extra-padding {
   padding-top: 30px;
 }
 
+div.application.container.extra-padding-school-group {
+  padding-top: 42px;
+}
+
 section.home.alerts {
   padding-top: 30px;
 }
